// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schemed image component renders correctly 1`] = `
<div>
  <div
    class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
    data-gatsby-image-wrapper=""
    style="position: relative; overflow: hidden; display: inline-block;"
  >
    <div
      style="max-width: 32px; display: block;"
    >
      <img
        alt=""
        aria-hidden="true"
        role="presentation"
        src="data:image/svg+xml;charset=utf-8,%3Csvg height='32' width='32' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
        style="max-width: 100%; display: block; position: static;"
      />
    </div>
    <div
      aria-hidden="true"
      data-placeholder-image=""
      style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
    />
    <picture>
      <source
        data-srcset="/static/f407c31b217aac6e0cd4171092d53a8c/5d252/facebook-color.webp 8w,/static/f407c31b217aac6e0cd4171092d53a8c/e789a/facebook-color.webp 16w,/static/f407c31b217aac6e0cd4171092d53a8c/ef6ff/facebook-color.webp 32w,/static/f407c31b217aac6e0cd4171092d53a8c/8257c/facebook-color.webp 64w"
        sizes="(min-width: 32px) 32px, 100vw"
        type="image/webp"
      />
      <img
        alt="Test"
        data-gatsby-image-ssr=""
        data-main-image=""
        data-src="/static/f407c31b217aac6e0cd4171092d53a8c/914ee/facebook-color.png"
        data-srcset="/static/f407c31b217aac6e0cd4171092d53a8c/22867/facebook-color.png 8w,/static/f407c31b217aac6e0cd4171092d53a8c/fbc98/facebook-color.png 16w,/static/f407c31b217aac6e0cd4171092d53a8c/914ee/facebook-color.png 32w,/static/f407c31b217aac6e0cd4171092d53a8c/1c9ce/facebook-color.png 64w"
        decoding="async"
        loading="lazy"
        sizes="(min-width: 32px) 32px, 100vw"
        style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
      />
    </picture>
    <noscript />
    <script
      type="module"
    >
      const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
    </script>
  </div>
  ,
</div>
`;

exports[`Schemed image component renders presentation images correctly 1`] = `
<div>
  <div
    class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
    data-gatsby-image-wrapper=""
    style="position: relative; overflow: hidden; display: inline-block;"
  >
    <div
      style="max-width: 32px; display: block;"
    >
      <img
        alt=""
        aria-hidden="true"
        role="presentation"
        src="data:image/svg+xml;charset=utf-8,%3Csvg height='32' width='32' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
        style="max-width: 100%; display: block; position: static;"
      />
    </div>
    <div
      aria-hidden="true"
      data-placeholder-image=""
      style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
    />
    <picture>
      <source
        data-srcset="/static/f407c31b217aac6e0cd4171092d53a8c/5d252/facebook-color.webp 8w,/static/f407c31b217aac6e0cd4171092d53a8c/e789a/facebook-color.webp 16w,/static/f407c31b217aac6e0cd4171092d53a8c/ef6ff/facebook-color.webp 32w,/static/f407c31b217aac6e0cd4171092d53a8c/8257c/facebook-color.webp 64w"
        sizes="(min-width: 32px) 32px, 100vw"
        type="image/webp"
      />
      <img
        alt=""
        data-gatsby-image-ssr=""
        data-main-image=""
        data-src="/static/f407c31b217aac6e0cd4171092d53a8c/914ee/facebook-color.png"
        data-srcset="/static/f407c31b217aac6e0cd4171092d53a8c/22867/facebook-color.png 8w,/static/f407c31b217aac6e0cd4171092d53a8c/fbc98/facebook-color.png 16w,/static/f407c31b217aac6e0cd4171092d53a8c/914ee/facebook-color.png 32w,/static/f407c31b217aac6e0cd4171092d53a8c/1c9ce/facebook-color.png 64w"
        decoding="async"
        loading="lazy"
        role="presentation"
        sizes="(min-width: 32px) 32px, 100vw"
        style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
      />
    </picture>
    <noscript />
    <script
      type="module"
    >
      const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
    </script>
  </div>
  ,
</div>
`;
